Page summarys are fixed length to prevent uneven boxes, buttons right button justified

--- a/assets/css/refresh.css
+++ b/assets/css/refresh.css
@@ -148,6 +148,18 @@ div.scroll::-webkit-scrollbar { width: 0px; }
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
+
+.box .btn-holder {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: auto;
+}
+
+#c2 {  flex-direction: column; }
+
 /* end */
 
 /* .refresh-book{
